--- a/tests/test_cases/2023/commands/710.77A.222A0C|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0C|fc=1.yaml
@@ -16,3 +16,7 @@ test_cases:
     VOLKSWAGEN_BAT_SOC: 74
     VOLKSWAGEN_SSB_SOC: 74
   response: 77A04622A0C4A
+- expected_values:
+    VOLKSWAGEN_BAT_SOC: 75
+    VOLKSWAGEN_SSB_SOC: 75
+  response: 77A04622A0C4B
