--- a/tests/test_cases/2023/commands/710.77A.222A61|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A61|fc=1.yaml
@@ -24,3 +24,35 @@ test_cases:
   response: |-
     77A100B622A61000118
     77A212B00011082AAAA
+- expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 7192.1
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 6996.1
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000118
+    77A21F100011149AAAA
+- expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 7192.2
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 6996.1
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000118
+    77A21F200011149AAAA
+- expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 7192.2
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 6996.2
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000118
+    77A21F20001114AAAAA
+- expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 7192.3
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 6996.2
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000118
+    77A21F30001114AAAAA
