--- a/tests/test_cases/2023/commands/746.7B0.222604|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222604|fc=1.yaml
@@ -1,8 +1,20 @@
 command_id: 746.7B0.222604|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 0
+  response: 7B00462260400
+- expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 3.6
+  response: 7B00462260424
+- expected_values:
     VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 5.3
   response: 7B00462260435
 - expected_values:
     VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 6.6
   response: 7B00462260442
+- expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 9.1
+  response: 7B0046226045B
+- expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 9.6
+  response: 7B00462260460
