--- a/tests/test_cases/2023/commands/746.7B0.222605|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222605|fc=1.yaml
@@ -1,6 +1,14 @@
 command_id: 746.7B0.222605|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CLIMATE_REFRIG_P: 6.4
+    VOLKSWAGEN_REFRIGERANT_PRESSURE: 6.4
+  response: 7B00462260520
+- expected_values:
+    VOLKSWAGEN_CLIMATE_REFRIG_P: 7.2
+    VOLKSWAGEN_REFRIGERANT_PRESSURE: 7.2
+  response: 7B00462260524
+- expected_values:
     VOLKSWAGEN_CLIMATE_REFRIG_P: 8
     VOLKSWAGEN_REFRIGERANT_PRESSURE: 8
   response: 7B00462260528
@@ -12,3 +20,11 @@ test_cases:
     VOLKSWAGEN_CLIMATE_REFRIG_P: 10.4
     VOLKSWAGEN_REFRIGERANT_PRESSURE: 10.4
   response: 7B00462260534
+- expected_values:
+    VOLKSWAGEN_CLIMATE_REFRIG_P: 11
+    VOLKSWAGEN_REFRIGERANT_PRESSURE: 11
+  response: 7B00462260537
+- expected_values:
+    VOLKSWAGEN_CLIMATE_REFRIG_P: 11.8
+    VOLKSWAGEN_REFRIGERANT_PRESSURE: 11.8
+  response: 7B0046226053B
