--- a/tests/test_cases/2023/commands/746.7B0.22260C|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22260C|fc=1.yaml
@@ -12,3 +12,11 @@ test_cases:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 19.314
     VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 19.33333
   response: 7B00462260C3A
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 22.977
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 23
+  response: 7B00462260C45
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 23.643
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 23.66667
+  response: 7B00462260C47
