--- a/tests/test_cases/2023/commands/746.7B0.222612|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222612|fc=1.yaml
@@ -5,6 +5,22 @@ test_cases:
     VOLKSWAGEN_T_AFTER_EVAPORATOR: 8
   response: 7B00462261218
 - expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 8.658
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 8.66667
+  response: 7B0046226121A
+- expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 10.989
     VOLKSWAGEN_T_AFTER_EVAPORATOR: 11
   response: 7B00462261221
+- expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 13.32
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 13.33333
+  response: 7B00462261228
+- expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 15.318
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 15.33333
+  response: 7B0046226122E
+- expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 27.972
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 28
+  response: 7B00462261254
