--- a/tests/test_cases/2023/commands/746.7B0.222622|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222622|fc=1.yaml
@@ -1,6 +1,22 @@
 command_id: 746.7B0.222622|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 3
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 3
+  response: 7B006622622002006
+- expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 18
     VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 18
   response: 7B006622622003F24
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 27
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 27
+  response: 7B006622622005136
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 43
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 43
+  response: 7B006622622007356
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 43.5
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 43.5
+  response: 7B006622622007457
