--- a/tests/test_cases/2023/commands/746.7B0.22263D|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22263D|fc=1.yaml
@@ -12,3 +12,12 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_RR_DEFL_T: 20.979
   response: 7B00462263D3F
+- expected_values:
+    VOLKSWAGEN_CLIMATE_RR_DEFL_T: 24.975
+  response: 7B00462263D4B
+- expected_values:
+    VOLKSWAGEN_CLIMATE_RR_DEFL_T: 26.973
+  response: 7B00462263D51
+- expected_values:
+    VOLKSWAGEN_CLIMATE_RR_DEFL_T: 29.637
+  response: 7B00462263D59
