--- a/tests/test_cases/2023/commands/7E0.0105.yaml
+++ b/tests/test_cases/2023/commands/7E0.0105.yaml
@@ -7,5 +7,11 @@ test_cases:
     ECT: 79
   response: '7E803410577'
 - expected_values:
+    ECT: 86
+  response: 7E80341057E
+- expected_values:
     ECT: 88
   response: '7E803410580'
+- expected_values:
+    ECT: 95
+  response: '7E803410587'
