--- a/tests/test_cases/2023/commands/7E0.0134.yaml
+++ b/tests/test_cases/2023/commands/7E0.0134.yaml
@@ -1,9 +1,21 @@
 command_id: 7E0.0134
 test_cases:
 - expected_values:
+    LAMBDA11_CURRENT: 0.97849
+    O2S11_CURRENT: -0.05859
+  response: 7E80641347D3F7FF1
+- expected_values:
+    LAMBDA11_CURRENT: 0.9924
+    O2S11_CURRENT: -0.03516
+  response: 7E80641347F077FF7
+- expected_values:
     LAMBDA11_CURRENT: 0.99948
     O2S11_CURRENT: -0.02344
   response: 7E80641347FEF7FFA
+- expected_values:
+    LAMBDA11_CURRENT: 1.01221
+    O2S11_CURRENT: -0.00391
+  response: 7E806413481907FFF
 - expected_values:
     LAMBDA11_CURRENT: 1.02734
     O2S11_CURRENT: 0.01562
