--- a/tests/test_cases/2023/commands/7E0.221151.yaml
+++ b/tests/test_cases/2023/commands/7E0.221151.yaml
@@ -4,3 +4,15 @@ test_cases:
     VOLKSWAGEN_EM_RPM_1: 8081.5
     VOLKSWAGEN_MISFIRES__CYL__4: 16163
   response: 7E8056211513F23
+- expected_values:
+    VOLKSWAGEN_EM_RPM_1: 8084
+    VOLKSWAGEN_MISFIRES__CYL__4: 16168
+  response: 7E8056211513F28
+- expected_values:
+    VOLKSWAGEN_EM_RPM_1: 8085.5
+    VOLKSWAGEN_MISFIRES__CYL__4: 16171
+  response: 7E8056211513F2B
+- expected_values:
+    VOLKSWAGEN_EM_RPM_1: 8086.5
+    VOLKSWAGEN_MISFIRES__CYL__4: 16173
+  response: 7E8056211513F2D
