--- a/tests/test_cases/2023/commands/7E0.7E8.22114F.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22114F.yaml
@@ -12,3 +12,11 @@ test_cases:
     VOLKSWAGEN_MISFIRES_C1: 20180
     VOLKSWAGEN_PQ35_SOOT_MASS_CALC: 201.8
   response: 7E80562114F4ED4
+- expected_values:
+    VOLKSWAGEN_MISFIRES_C1: 20207
+    VOLKSWAGEN_PQ35_SOOT_MASS_CALC: 202.07
+  response: 7E80562114F4EEF
+- expected_values:
+    VOLKSWAGEN_MISFIRES_C1: 20215
+    VOLKSWAGEN_PQ35_SOOT_MASS_CALC: 202.15
+  response: 7E80562114F4EF7
