--- a/tests/test_cases/2023/commands/7E0.7E8.221153.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221153.yaml
@@ -8,3 +8,11 @@ test_cases:
     VOLKSWAGEN_EM_TORQ_1: 545.0625
     VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 174.42
   response: '7E8056211534422'
+- expected_values:
+    VOLKSWAGEN_EM_TORQ_1: 545.4375
+    VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 174.54
+  response: 7E805621153442E
+- expected_values:
+    VOLKSWAGEN_EM_TORQ_1: 545.53125
+    VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 174.57
+  response: '7E8056211534431'
