--- a/tests/test_cases/2023/commands/7E0.7E8.2211BD.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2211BD.yaml
@@ -8,3 +8,11 @@ test_cases:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.3556
     VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 13.556
   response: 7E8056211BD0D3D
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL_WARN: 1.438
+    VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 14.38
+  response: 7E8056211BD0E0B
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL_WARN: 1.4688
+    VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 14.688
+  response: 7E8056211BD0E58
