--- a/tests/test_cases/2023/commands/7E0.7E8.221282.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221282.yaml
@@ -1,8 +1,17 @@
 command_id: 7E0.7E8.221282
 test_cases:
 - expected_values:
+    VOLKSWAGEN_EXHAUST_GAS_T_BEFORE_CATALYST: 162.31
+  response: '7E8056212824594'
+- expected_values:
     VOLKSWAGEN_EXHAUST_GAS_T_BEFORE_CATALYST: 430.69
   response: 7E80562128279FF
 - expected_values:
     VOLKSWAGEN_EXHAUST_GAS_T_BEFORE_CATALYST: 468.69
   response: 7E805621282816B
+- expected_values:
+    VOLKSWAGEN_EXHAUST_GAS_T_BEFORE_CATALYST: 558.67
+  response: 7E80562128292FE
+- expected_values:
+    VOLKSWAGEN_EXHAUST_GAS_T_BEFORE_CATALYST: 575.25
+  response: 7E805621282963B
