--- a/tests/test_cases/2023/commands/7E0.7E8.2214CE.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2214CE.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_POST_INJ_3_ACTIVATION_DURATION: 1.0184
   response: 7E8056214CE09F2
+- expected_values:
+    VOLKSWAGEN_PQ35_POST_INJ_3_ACTIVATION_DURATION: 2.9624
+  response: 7E8056214CE1CEE
