--- a/tests/test_cases/2023/commands/7E0.7E8.22162D.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22162D.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_FUEL_T: -273.1
   response: 7E80762162D00000800
+- expected_values:
+    VOLKSWAGEN_PQ35_FUEL_T: -209.1
+  response: 7E80762162D02800000
