--- a/tests/test_cases/2023/commands/7E0.7E8.22F442.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22F442.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.7E8.22F442
 test_cases:
 - expected_values:
+    VOLKSWAGEN_VPWR: 12.48
+  response: 7E80562F44230C0
+- expected_values:
+    VOLKSWAGEN_VPWR: 13.02
+  response: 7E80562F44232DC
+- expected_values:
     VOLKSWAGEN_VPWR: 13.44
   response: 7E80562F4423480
 - expected_values:
