--- a/tests/test_cases/2023/commands/7E1.7E9.223841.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.223841.yaml
@@ -8,3 +8,7 @@ test_cases:
     VOLKSWAGEN_ODO_TCM_1: 3961263360
     VOLKSWAGEN_ODO_V1: 138366
   response: 7E90762384100151CEC
+- expected_values:
+    VOLKSWAGEN_ODO_TCM_1: 371201280
+    VOLKSWAGEN_ODO_V1: 138447
+  response: '7E90762384100152016'
