--- a/tests/test_cases/2023/commands/70F.779.222BE9|fc=1.yaml
+++ b/tests/test_cases/2023/commands/70F.779.222BE9|fc=1.yaml
@@ -4,5 +4,17 @@ test_cases:
     VOLKSWAGEN_PQ35_HAL_V: 0
   response: 77904622BE900
 - expected_values:
+    VOLKSWAGEN_PQ35_HAL_V: 1.5
+  response: 77904622BE90F
+- expected_values:
+    VOLKSWAGEN_PQ35_HAL_V: 1.6
+  response: 77904622BE910
+- expected_values:
+    VOLKSWAGEN_PQ35_HAL_V: 1.7
+  response: 77904622BE911
+- expected_values:
     VOLKSWAGEN_PQ35_HAL_V: 1.8
   response: 77904622BE912
+- expected_values:
+    VOLKSWAGEN_PQ35_HAL_V: 2.1
+  response: 77904622BE915
