--- a/tests/test_cases/2023/commands/70F.779.222BF0|fc=1.yaml
+++ b/tests/test_cases/2023/commands/70F.779.222BF0|fc=1.yaml
@@ -3,3 +3,12 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 0
   response: 77905622BF00000
+- expected_values:
+    VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 0.1
+  response: 77905622BF00001
+- expected_values:
+    VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 0.2
+  response: 77905622BF00002
+- expected_values:
+    VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 0.3
+  response: 77905622BF00003
