--- a/tests/test_cases/2023/commands/710.77A.222A00|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A00|fc=1.yaml
@@ -5,6 +5,10 @@ test_cases:
     VOLKSWAGEN_SSB_VT: 10.6
   response: 77A04622A0000
 - expected_values:
+    VOLKSWAGEN_MQB_GEN_TRG_V: 13.3
+    VOLKSWAGEN_SSB_VT: 13.3
+  response: 77A04622A001B
+- expected_values:
     VOLKSWAGEN_MQB_GEN_TRG_V: 13.9
     VOLKSWAGEN_SSB_VT: 13.9
   response: 77A04622A0021
@@ -16,3 +20,7 @@ test_cases:
     VOLKSWAGEN_MQB_GEN_TRG_V: 14.4
     VOLKSWAGEN_SSB_VT: 14.4
   response: 77A04622A0026
+- expected_values:
+    VOLKSWAGEN_MQB_GEN_TRG_V: 14.9
+    VOLKSWAGEN_SSB_VT: 14.9
+  response: 77A04622A002B
