--- a/tests/test_cases/2023/commands/710.77A.222A0B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0B|fc=1.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_BAT_T_V2: 32
   response: 77A04622A0B48
 - expected_values:
+    VOLKSWAGEN_BAT_T_V2: 33
+  response: 77A04622A0B49
+- expected_values:
     VOLKSWAGEN_BAT_T_V2: 38
   response: 77A04622A0B4E
 - expected_values:
