--- a/tests/test_cases/2023/commands/710.77A.222A0E|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0E|fc=1.yaml
@@ -18,3 +18,9 @@ test_cases:
     VOLKSWAGEN_SSB_R: 6.2
     VOLKSWAGEN_SSB_RES_INT: 6.2
   response: 77A04622A0E1F
+- expected_values:
+    VOLKSWAGEN_BAT_INT_R: 6.4
+    VOLKSWAGEN_MQB_BAT_INT_RES: 6.4
+    VOLKSWAGEN_SSB_R: 6.4
+    VOLKSWAGEN_SSB_RES_INT: 6.4
+  response: 77A04622A0E20
