--- a/tests/test_cases/2023/commands/714.77E.222211|fc=1.yaml
+++ b/tests/test_cases/2023/commands/714.77E.222211|fc=1.yaml
@@ -4,5 +4,17 @@ test_cases:
     VOLKSWAGEN_PQ35_CHG_AIR_P: 0
   response: '77E0462221100'
 - expected_values:
+    VOLKSWAGEN_PQ35_CHG_AIR_P: 7.05882
+  response: '77E0462221112'
+- expected_values:
+    VOLKSWAGEN_PQ35_CHG_AIR_P: 7.45098
+  response: '77E0462221113'
+- expected_values:
+    VOLKSWAGEN_PQ35_CHG_AIR_P: 7.84314
+  response: '77E0462221114'
+- expected_values:
     VOLKSWAGEN_PQ35_CHG_AIR_P: 8.62745
   response: '77E0462221116'
+- expected_values:
+    VOLKSWAGEN_PQ35_CHG_AIR_P: 10.19608
+  response: 77E046222111A
