--- a/tests/test_cases/2023/commands/746.7B0.222603|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222603|fc=1.yaml
@@ -4,8 +4,20 @@ test_cases:
     VOLKSWAGEN_CLIMATE_A_C_COMP_SPD: 800
   response: '7B0 04 62 26 03 08 '
 - expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_SPD: 0
+  response: 7B00462260300
+- expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_SPD: 900
+  response: 7B00462260309
+- expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_SPD: 1000
+  response: 7B0046226030A
+- expected_values:
     VOLKSWAGEN_CLIMATE_A_C_COMP_SPD: 1200
   response: 7B0046226030C
 - expected_values:
     VOLKSWAGEN_CLIMATE_A_C_COMP_SPD: 1400
   response: 7B0046226030E
+- expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_SPD: 2100
+  response: 7B00462260315
