--- a/tests/test_cases/2023/commands/746.7B0.222607|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222607|fc=1.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY: 30
   response: 7B0046226074B
+- expected_values:
+    VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY: 40
+  response: 7B00462260764
