--- a/tests/test_cases/2023/commands/746.7B0.222609|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222609|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 746.7B0.222609|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_AAT_FROMCABIN: 19.5
+    VOLKSWAGEN_AAT_V2: 19.5
+  response: 7B00462260927
+- expected_values:
     VOLKSWAGEN_AAT_FROMCABIN: 24.5
     VOLKSWAGEN_AAT_V2: 24.5
   response: 7B00462260931
