--- a/tests/test_cases/2023/commands/746.7B0.22260A|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22260A|fc=1.yaml
@@ -1,5 +1,11 @@
 command_id: 746.7B0.22260A|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_AAT_CABIN: -30.5
+  response: 7B00462260A27
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: -28.5
+  response: 7B00462260A2B
+- expected_values:
     VOLKSWAGEN_AAT_CABIN: -25.5
   response: 7B00462260A31
