--- a/tests/test_cases/2023/commands/746.7B0.22260D|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22260D|fc=1.yaml
@@ -8,3 +8,19 @@ test_cases:
     VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 19.314
     VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 19.33333
   response: 7B00462260D3A
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 23.976
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 24
+  response: 7B00462260D48
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 24.975
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 25
+  response: 7B00462260D4B
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 25.308
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 25.33333
+  response: 7B00462260D4C
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 27.972
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 28
+  response: 7B00462260D54
