--- a/tests/test_cases/2023/commands/746.7B0.222611|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222611|fc=1.yaml
@@ -9,6 +9,14 @@ test_cases:
     VOLKSWAGEN_LEG_DEFLECTOR_T: 24.66667
   response: 7B0046226114A
 - expected_values:
+    VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 25.974
+    VOLKSWAGEN_LEG_DEFLECTOR_T: 26
+  response: 7B0046226114E
+- expected_values:
     VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 27.972
     VOLKSWAGEN_LEG_DEFLECTOR_T: 28
   response: 7B00462261154
+- expected_values:
+    VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 30.303
+    VOLKSWAGEN_LEG_DEFLECTOR_T: 30.33333
+  response: 7B0046226115B
