--- a/tests/test_cases/2023/commands/746.7B0.222626|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222626|fc=1.yaml
@@ -8,3 +8,11 @@ test_cases:
     VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE: 21.5
     VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACTUAL_VALUE: 21.5
   response: 7B00662262600462B
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE: 24
+    VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACTUAL_VALUE: 24
+  response: 7B006622626004B30
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE: 43
+    VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACTUAL_VALUE: 43
+  response: 7B006622626007256
