--- a/tests/test_cases/2023/commands/767.7D1.222431|fc=1.yaml
+++ b/tests/test_cases/2023/commands/767.7D1.222431|fc=1.yaml
@@ -4,3 +4,11 @@ test_cases:
     VOLKSWAGEN_GPS_SATS_TRACKED: 10
     VOLKSWAGEN_GPS_SATS_VISIBLE: 1
   response: 7D106622431010A00
+- expected_values:
+    VOLKSWAGEN_GPS_SATS_TRACKED: 16
+    VOLKSWAGEN_GPS_SATS_VISIBLE: 4
+  response: 7D10662243104100A
+- expected_values:
+    VOLKSWAGEN_GPS_SATS_TRACKED: 16
+    VOLKSWAGEN_GPS_SATS_VISIBLE: 4
+  response: 7D106622431041010
