--- a/tests/test_cases/2023/commands/7E0.0104.yaml
+++ b/tests/test_cases/2023/commands/7E0.0104.yaml
@@ -1,8 +1,17 @@
 command_id: 7E0.0104
 test_cases:
 - expected_values:
+    LOAD_PCT: 0
+  response: '7E803410400'
+- expected_values:
+    LOAD_PCT: 19.21569
+  response: '7E803410431'
+- expected_values:
     LOAD_PCT: 29.01961
   response: 7E80341044A
 - expected_values:
     LOAD_PCT: 30.58824
   response: 7E80341044E
+- expected_values:
+    LOAD_PCT: 54.90196
+  response: 7E80341048C
