--- a/tests/test_cases/2023/commands/7E0.010D.yaml
+++ b/tests/test_cases/2023/commands/7E0.010D.yaml
@@ -7,5 +7,8 @@ test_cases:
     VSS: 19
   response: 7E803410D13
 - expected_values:
+    VSS: 44
+  response: 7E803410D2C
+- expected_values:
     VSS: 83
   response: 7E803410D53
