--- a/tests/test_cases/2023/commands/7E0.0110.yaml
+++ b/tests/test_cases/2023/commands/7E0.0110.yaml
@@ -1,11 +1,17 @@
 command_id: 7E0.0110
 test_cases:
 - expected_values:
+    MAF: 0
+  response: '7E80441100000'
+- expected_values:
     MAF: 4.97
   response: 7E804411001F1
 - expected_values:
     MAF: 17.27
   response: 7E804411006BF
+- expected_values:
+    MAF: 26.47
+  response: 7E80441100A57
 - expected_values:
     MAF: 31.44
   response: 7E80441100C48
