--- a/tests/test_cases/2023/commands/7E0.221152.yaml
+++ b/tests/test_cases/2023/commands/7E0.221152.yaml
@@ -4,3 +4,15 @@ test_cases:
     VOLKSWAGEN_EM_RPM_2: 5706
     VOLKSWAGEN_MISFIRES__CYL__2: 11412
   response: 7E8056211522C94
+- expected_values:
+    VOLKSWAGEN_EM_RPM_2: 5709
+    VOLKSWAGEN_MISFIRES__CYL__2: 11418
+  response: 7E8056211522C9A
+- expected_values:
+    VOLKSWAGEN_EM_RPM_2: 5710
+    VOLKSWAGEN_MISFIRES__CYL__2: 11420
+  response: 7E8056211522C9C
+- expected_values:
+    VOLKSWAGEN_EM_RPM_2: 5710.5
+    VOLKSWAGEN_MISFIRES__CYL__2: 11421
+  response: 7E8056211522C9D
