--- a/tests/test_cases/2023/commands/7E0.2211BA.yaml
+++ b/tests/test_cases/2023/commands/7E0.2211BA.yaml
@@ -4,8 +4,17 @@ test_cases:
     VOLKSWAGEN_OIL_LEVEL: 46.664
   response: 7E8056211BA2D92
 - expected_values:
+    VOLKSWAGEN_OIL_LEVEL: 52.48
+  response: 7E8056211BA3340
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL: 52.864
   response: 7E8056211BA33A0
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL: 53.36
   response: 7E8056211BA341C
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL: 53.92
+  response: 7E8056211BA34A8
+- expected_values:
+    VOLKSWAGEN_OIL_LEVEL: 65.984
+  response: 7E8056211BA4070
