--- a/tests/test_cases/2023/commands/7E0.7E8.221002.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221002.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.7E8.221002
 test_cases:
 - expected_values:
+    VOLKSWAGEN_AC_COMP_T: 0
+  response: '7E8056210020000'
+- expected_values:
+    VOLKSWAGEN_AC_COMP_T: 4.6
+  response: 7E805621002002E
+- expected_values:
     VOLKSWAGEN_AC_COMP_T: 7.2
   response: '7E8056210020048'
 - expected_values:
