--- a/tests/test_cases/2023/commands/7E0.7E8.2210DE.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2210DE.yaml
@@ -1,8 +1,14 @@
 command_id: 7E0.7E8.2210DE
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_4_RAIL_P_3: 0
+  response: 7E8056210DE0000
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_4_RAIL_P_3: 0.0599
   response: 7E8056210DE04AE
 - expected_values:
     VOLKSWAGEN_PQ35_INJ_4_RAIL_P_3: -0.0443
   response: 7E8056210DEFC8A
+- expected_values:
+    VOLKSWAGEN_PQ35_INJ_4_RAIL_P_3: -0.0192
+  response: 7E8056210DEFE80
