--- a/tests/test_cases/2023/commands/7E0.7E8.2210E0.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2210E0.yaml
@@ -8,3 +8,11 @@ test_cases:
     VOLKSWAGEN_ODO_2_V3: 138366
     VOLKSWAGEN_ODO_V4: 138366
   response: 7E8076210E000021C7E
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 138447
+    VOLKSWAGEN_ODO_V4: 138447
+  response: 7E8076210E000021CCF
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 138508
+    VOLKSWAGEN_ODO_V4: 138508
+  response: 7E8076210E000021D0C
