--- a/tests/test_cases/2023/commands/7E0.7E8.221139.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221139.yaml
@@ -5,6 +5,10 @@ test_cases:
     VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 160.18
   response: 7E8056211393E92
 - expected_values:
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 163.84
+    VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 163.84
+  response: '7E8056211394000'
+- expected_values:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 165.84
     VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 165.84
   response: 7E80562113940C8
