--- a/tests/test_cases/2023/commands/7E0.7E8.22113F.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22113F.yaml
@@ -1,5 +1,11 @@
 command_id: 7E0.7E8.22113F
 test_cases:
 - expected_values:
+    VOLKSWAGEN_FUEL_CONS: 0
+  response: 7E80562113F0000
+- expected_values:
     VOLKSWAGEN_FUEL_CONS: 2.01
   response: 7E80562113F00C9
+- expected_values:
+    VOLKSWAGEN_FUEL_CONS: 5.46
+  response: 7E80562113F0222
