--- a/tests/test_cases/2023/commands/7E0.7E8.221154.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221154.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_EM_TORQ_2: 286.625
   response: 7E80562115423D4
+- expected_values:
+    VOLKSWAGEN_EM_TORQ_2: 286.9375
+  response: 7E80562115423DE
+- expected_values:
+    VOLKSWAGEN_EM_TORQ_2: 287.09375
+  response: 7E80562115423E3
