--- a/tests/test_cases/2023/commands/7E0.7E8.2211BF.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2211BF.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_FUEL_P_REG: 0.13
   response: 7E8056211BF000D
+- expected_values:
+    VOLKSWAGEN_PQ35_FUEL_P_REG: 0.21
+  response: 7E8056211BF0015
+- expected_values:
+    VOLKSWAGEN_PQ35_FUEL_P_REG: 0.24
+  response: 7E8056211BF0018
