--- a/tests/test_cases/2023/commands/7E0.7E8.221221.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221221.yaml
@@ -1,5 +1,11 @@
 command_id: 7E0.7E8.221221
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_ACCEL_PED_1: 0
+  response: '7E8056212210000'
+- expected_values:
+    VOLKSWAGEN_PQ35_ACCEL_PED_1: -8.2
+  response: 7E805621221FFD7
+- expected_values:
     VOLKSWAGEN_PQ35_ACCEL_PED_1: -4.6
   response: 7E805621221FFE9
