--- a/tests/test_cases/2023/commands/7E0.7E8.22133B.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22133B.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CAMS_SPD: 70.5
   response: 7E80562133B00EB
+- expected_values:
+    VOLKSWAGEN_PQ35_CAMS_SPD: 71.1
+  response: 7E80562133B00ED
