--- a/tests/test_cases/2023/commands/7E0.7E8.221341.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221341.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.7E8.221341
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_CAMS_END: -6553.6
+  response: '7E8056213418000'
+- expected_values:
+    VOLKSWAGEN_PQ35_CAMS_END: -293.4
+  response: 7E805621341FA45
+- expected_values:
     VOLKSWAGEN_PQ35_CAMS_END: -270.2
   response: 7E805621341FAB9
 - expected_values:
