--- a/tests/test_cases/2023/commands/7E0.7E8.22F40D.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22F40D.yaml
@@ -1,8 +1,14 @@
 command_id: 7E0.7E8.22F40D
 test_cases:
 - expected_values:
+    VOLKSWAGEN_VSS_V2: 0
+  response: 7E80462F40D00
+- expected_values:
     VOLKSWAGEN_VSS_V2: 5
   response: 7E80462F40D05
 - expected_values:
     VOLKSWAGEN_VSS_V2: 21
   response: 7E80462F40D15
+- expected_values:
+    VOLKSWAGEN_VSS_V2: 99
+  response: 7E80462F40D63
