--- a/tests/test_cases/2023/commands/7E1.7E9.222104.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.222104.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_ATF_T: 59
   response: '7E90462210463'
+- expected_values:
+    VOLKSWAGEN_ATF_T: 85
+  response: 7E9046221047D
