--- a/tests/test_cases/2023/commands/7E1.7E9.222131.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.222131.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.222131
 test_cases:
 - expected_values:
+    VOLKSWAGEN_TORQUE_CONVERTER_SLIP: 0
+  response: '7E9056221310000'
+- expected_values:
     VOLKSWAGEN_TORQUE_CONVERTER_SLIP: 3
   response: '7E9056221310003'
 - expected_values:
