--- a/tests/test_cases/2023/commands/7E1.7E9.22388B.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.22388B.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 4365
   response: 7E90562388B0D11
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 4621
+  response: 7E90562388B0D12
