--- a/tests/test_cases/2023/commands/710.77A.222A09|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A09|fc=1.yaml
@@ -11,6 +11,11 @@ test_cases:
     VOLKSWAGEN_SSB_C: 0
   response: 77A07622A09FFFFC6FA
 - expected_values:
+    VOLKSWAGEN_BAT_I: 13777.163
+    VOLKSWAGEN_MQB_BAT_I: -13.56
+    VOLKSWAGEN_SSB_C: 0
+  response: 77A07622A09FFFFCB08
+- expected_values:
     VOLKSWAGEN_BAT_I: 13777.215
     VOLKSWAGEN_MQB_BAT_I: -0.241
     VOLKSWAGEN_SSB_C: 0
