--- a/tests/test_cases/2023/commands/7E0.0105.yaml
+++ b/tests/test_cases/2023/commands/7E0.0105.yaml
@@ -4,6 +4,9 @@ test_cases:
     ECT: 60
   response: '7E803410564'
 - expected_values:
+    ECT: 64
+  response: '7E803410568'
+- expected_values:
     ECT: 79
   response: '7E803410577'
 - expected_values:
