--- a/tests/test_cases/2023/commands/7E0.7E8.22114F.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22114F.yaml
@@ -20,3 +20,7 @@ test_cases:
     VOLKSWAGEN_MISFIRES_C1: 20215
     VOLKSWAGEN_PQ35_SOOT_MASS_CALC: 202.15
   response: 7E80562114F4EF7
+- expected_values:
+    VOLKSWAGEN_MISFIRES_C1: 20255
+    VOLKSWAGEN_PQ35_SOOT_MASS_CALC: 202.55
+  response: 7E80562114F4F1F
