--- a/tests/test_cases/2023/commands/7E1.7E9.223841.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.223841.yaml
@@ -12,3 +12,7 @@ test_cases:
     VOLKSWAGEN_ODO_TCM_1: 371201280
     VOLKSWAGEN_ODO_V1: 138447
   response: '7E90762384100152016'
+- expected_values:
+    VOLKSWAGEN_ODO_TCM_1: 3995669760
+    VOLKSWAGEN_ODO_V1: 138699
+  response: 7E907623841001529EE
