--- a/tests/test_cases/2023/commands/70F.779.220C0A|fc=1.yaml
+++ b/tests/test_cases/2023/commands/70F.779.220C0A|fc=1.yaml
@@ -2,4 +2,7 @@ command_id: 70F.779.220C0A|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_HAL_MODE: 0
+  response: '779 04 62 0C 0A 00 '
+- expected_values:
+    VOLKSWAGEN_PQ35_HAL_MODE: 0
   response: 77904620C0A00
