--- a/tests/test_cases/2023/commands/70F.779.222B1C|fc=1.yaml
+++ b/tests/test_cases/2023/commands/70F.779.222B1C|fc=1.yaml
@@ -2,6 +2,9 @@ command_id: 70F.779.222B1C|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_FR_VSS: 0
+  response: '779 05 62 2B 1C 00 00 '
+- expected_values:
+    VOLKSWAGEN_PQ35_FR_VSS: 0
   response: 77905622B1C0000
 - expected_values:
     VOLKSWAGEN_PQ35_FR_VSS: 20.8
