--- a/tests/test_cases/2023/commands/710.77A.222A0B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0B|fc=1.yaml
@@ -1,6 +1,9 @@
 command_id: 710.77A.222A0B|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_BAT_T_V2: 29
+  response: 77A04622A0B45
+- expected_values:
     VOLKSWAGEN_BAT_T_V2: 32
   response: 77A04622A0B48
 - expected_values:
