--- a/tests/test_cases/2023/commands/746.7B0.22260D|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22260D|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 746.7B0.22260D|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 24.975
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 25
+  response: '7B0 04 62 26 0D 4B '
+- expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 17.982
     VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 18
   response: 7B00462260D36
