--- a/tests/test_cases/2023/commands/746.7B0.222611|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222611|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 746.7B0.222611|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 23.643
+    VOLKSWAGEN_LEG_DEFLECTOR_T: 23.66667
+  response: '7B0 04 62 26 11 47 '
+- expected_values:
     VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 23.31
     VOLKSWAGEN_LEG_DEFLECTOR_T: 23.33333
   response: 7B00462261146
