--- a/tests/test_cases/2023/commands/746.7B0.22261F|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22261F|fc=1.yaml
@@ -2,4 +2,7 @@ command_id: 746.7B0.22261F|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS: 76
+  response: '7B0 05 62 26 1F 00 4C '
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS: 76
   response: 7B00562261F004C
