--- a/tests/test_cases/2023/commands/746.7B0.222620|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222620|fc=1.yaml
@@ -2,4 +2,7 @@ command_id: 746.7B0.222620|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_RECIRC_FLAP_STOP_FRESH: 175
+  response: '7B0 05 62 26 20 00 AF '
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_STOP_FRESH: 175
   response: 7B00562262000AF
