--- a/tests/test_cases/2023/commands/746.7B0.22482B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22482B|fc=1.yaml
@@ -1,6 +1,9 @@
 command_id: 746.7B0.22482B|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_CLCH: 0
+  response: '7B0 04 62 48 2B 00 '
+- expected_values:
     VOLKSWAGEN_CLIMATE_A_C_CLCH: 1
   response: '7B0 04 62 48 2B 01 '
 - expected_values:
