--- a/tests/test_cases/2023/commands/767.7D1.222431|fc=1.yaml
+++ b/tests/test_cases/2023/commands/767.7D1.222431|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 767.7D1.222431|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_GPS_SATS_TRACKED: 3
+    VOLKSWAGEN_GPS_SATS_VISIBLE: 1
+  response: 7D106622431010300
+- expected_values:
     VOLKSWAGEN_GPS_SATS_TRACKED: 10
     VOLKSWAGEN_GPS_SATS_VISIBLE: 1
   response: 7D106622431010A00
