--- a/tests/test_cases/2023/commands/7E0.7E8.221154.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221154.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_EM_TORQ_2: 287.09375
   response: 7E80562115423E3
+- expected_values:
+    VOLKSWAGEN_EM_TORQ_2: 287.4375
+  response: 7E80562115423EE
