--- a/tests/test_cases/2023/commands/7E0.7E8.221160.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221160.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_ODO_HD: 138256.263
   response: 7E807621160083D9F87
+- expected_values:
+    VOLKSWAGEN_ODO_HD: 138446.53
+  response: 7E807621160084086C2
