--- a/tests/test_cases/2023/commands/7E0.7E8.2211BE.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2211BE.yaml
@@ -12,3 +12,7 @@ test_cases:
     VOLKSWAGEN_EOT_V2: 9
     VOLKSWAGEN_PQ35_OIL_T_2: -272.2
   response: 7E8056211BE0009
+- expected_values:
+    VOLKSWAGEN_EOT_V2: 20
+    VOLKSWAGEN_PQ35_OIL_T_2: -271.1
+  response: 7E8056211BE0014
