--- a/tests/test_cases/2023/commands/7E0.7E8.2214CE.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2214CE.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_PQ35_POST_INJ_3_ACTIVATION_DURATION: 1.0184
   response: 7E8056214CE09F2
 - expected_values:
+    VOLKSWAGEN_PQ35_POST_INJ_3_ACTIVATION_DURATION: 2.8624
+  response: 7E8056214CE1BF4
+- expected_values:
     VOLKSWAGEN_PQ35_POST_INJ_3_ACTIVATION_DURATION: 2.9624
   response: 7E8056214CE1CEE
