--- a/tests/test_cases/2023/commands/7E0.7E8.22F430.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22F430.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_WARM_UPS: 2
   response: 7E80462F43002
 - expected_values:
+    VOLKSWAGEN_WARM_UPS: 4
+  response: 7E80462F43004
+- expected_values:
     VOLKSWAGEN_WARM_UPS: 255
   response: 7E80462F430FF
