--- a/tests/test_cases/2023/commands/7E1.7E9.222104.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.222104.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_ATF_T: 59
   response: '7E90462210463'
 - expected_values:
+    VOLKSWAGEN_ATF_T: 60
+  response: '7E90462210464'
+- expected_values:
     VOLKSWAGEN_ATF_T: 85
   response: 7E9046221047D
