Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2023/commands/7E0.7E8.221153.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221153.yaml
@@ -16,3 +16,7 @@ test_cases:
     VOLKSWAGEN_EM_TORQ_1: 545.53125
     VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 174.57
   response: '7E8056211534431'
+- expected_values:
+    VOLKSWAGEN_EM_TORQ_1: 546.375
+    VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 174.84
+  response: 7E805621153444C
