--- a/tests/test_cases/2023/commands/7E0.7E8.221341.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221341.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.221341
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_CAMS_END: 6553.4
+  response: 7E8056213417FFF
+- expected_values:
     VOLKSWAGEN_PQ35_CAMS_END: -6553.6
   response: '7E8056213418000'
 - expected_values:
