--- a/tests/test_cases/2023/commands/7E0.7E8.22F431.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22F431.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_CLR_DIST: 62
   response: 7E80562F431003E
 - expected_values:
+    VOLKSWAGEN_CLR_DIST: 251
+  response: 7E80562F43100FB
+- expected_values:
     VOLKSWAGEN_CLR_DIST: 26219
   response: 7E80562F431666B
 - expected_values:
