--- a/tests/test_cases/2023/commands/7E1.7E9.2210B0.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.2210B0.yaml
@@ -21,3 +21,10 @@ test_cases:
     7E9211A0044950001CE
     7E9221A820000003200
     7E923000000AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_GR: 225.28
+  response: |-
+    7E910176210B0005839
+    7E921A30044F7C501CE
+    7E922F3620000003200
+    7E923000000AAAAAAAA
