--- a/tests/test_cases/2023/commands/70F.779.222BF3|fc=1.yaml
+++ b/tests/test_cases/2023/commands/70F.779.222BF3|fc=1.yaml
@@ -2,6 +2,9 @@ command_id: 70F.779.222BF3|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_HAL_DUTY: 0
+  response: '779 04 62 2B F3 00 '
+- expected_values:
+    VOLKSWAGEN_PQ35_HAL_DUTY: 0
   response: 77904622BF300
 - expected_values:
     VOLKSWAGEN_PQ35_HAL_DUTY: 6.29898
