--- a/tests/test_cases/2023/commands/746.7B0.22260C|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22260C|fc=1.yaml
@@ -20,3 +20,7 @@ test_cases:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 23.643
     VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 23.66667
   response: 7B00462260C47
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 24.975
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 25
+  response: 7B00462260C4B
