--- a/tests/test_cases/2023/commands/7E0.7E8.2210E0.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2210E0.yaml
@@ -16,3 +16,7 @@ test_cases:
     VOLKSWAGEN_ODO_2_V3: 138508
     VOLKSWAGEN_ODO_V4: 138508
   response: 7E8076210E000021D0C
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 138699
+    VOLKSWAGEN_ODO_V4: 138699
+  response: 7E8076210E000021DCB
