--- a/tests/test_cases/2023/commands/7E0.7E8.2214F8.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2214F8.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.2214F8
 test_cases:
 - expected_values:
+    VOLKSWAGEN_AAT_V1: 61.28
+  response: 7E8056214F80B50
+- expected_values:
     VOLKSWAGEN_AAT_V1: 66.68
   response: 7E8056214F80B6E
 - expected_values:
