--- a/tests/test_cases/2023/commands/7E1.7E9.2210AF.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.2210AF.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_GR: 314.88
   response: 7E9076210AF007BA56E
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_GR: 317.44
+  response: 7E9076210AF007C067D
