--- a/tests/test_cases/2023/commands/7E1.7E9.22388B.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.22388B.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 4621
   response: 7E90562388B0D12
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 5901
+  response: 7E90562388B0D17
