--- a/tests/test_cases/2023/commands/7E1.7E9.22388C.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.22388C.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 24340
   response: 7E90562388C145F
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 26644
+  response: 7E90562388C1468
