--- a/tests/test_cases/2023/commands/710.77A.222A61|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A61|fc=1.yaml
@@ -64,3 +64,11 @@ test_cases:
   response: |-
     77A100B622A61000119
     77A21EC00011254AAAA
+- expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 7263.4
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 7067.3
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A6100011B
+    77A21BA00011411AAAA
