--- a/tests/test_cases/2023/commands/746.7B0.222611|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222611|fc=1.yaml
@@ -24,3 +24,7 @@ test_cases:
     VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 30.303
     VOLKSWAGEN_LEG_DEFLECTOR_T: 30.33333
   response: 7B0046226115B
+- expected_values:
+    VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 30.969
+    VOLKSWAGEN_LEG_DEFLECTOR_T: 31
+  response: 7B0046226115D
