--- a/tests/test_cases/2023/commands/746.7B0.222612|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222612|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 746.7B0.222612|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 7.326
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 7.33333
+  response: 7B00462261216
+- expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 7.992
     VOLKSWAGEN_T_AFTER_EVAPORATOR: 8
   response: 7B00462261218
