--- a/tests/test_cases/2023/commands/746.7B0.222613|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222613|fc=1.yaml
@@ -24,3 +24,7 @@ test_cases:
     VOLKSWAGEN_CABIN_T: 28.5
     VOLKSWAGEN_HVAC_IAT: 28.5
   response: 7B005622613011D
+- expected_values:
+    VOLKSWAGEN_CABIN_T: 29.1
+    VOLKSWAGEN_HVAC_IAT: 29.1
+  response: 7B0056226130123
