--- a/tests/test_cases/2023/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2023/commands/714.77E.221014|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 714.77E.221014|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_AAT: 18
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 18
+  response: '77E0462101488'
+- expected_values:
     VOLKSWAGEN_AAT: 19.5
     VOLKSWAGEN_DASH_AMBIENT_AIR_T: 19.5
   response: 77E046210148B
