--- a/tests/test_cases/2023/commands/714.77E.222211|fc=1.yaml
+++ b/tests/test_cases/2023/commands/714.77E.222211|fc=1.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_CHG_AIR_P: 0
   response: '77E0462221100'
 - expected_values:
+    VOLKSWAGEN_PQ35_CHG_AIR_P: 5.4902
+  response: 77E046222110E
+- expected_values:
     VOLKSWAGEN_PQ35_CHG_AIR_P: 7.05882
   response: '77E0462221112'
 - expected_values:
