--- a/tests/test_cases/2023/commands/746.7B0.222604|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222604|fc=1.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 3.6
   response: 7B00462260424
 - expected_values:
+    VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 4.9
+  response: 7B00462260431
+- expected_values:
     VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD: 5.3
   response: 7B00462260435
 - expected_values:
