--- a/tests/test_cases/2023/commands/746.7B0.22260C|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22260C|fc=1.yaml
@@ -9,6 +9,10 @@ test_cases:
     VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 18
   response: 7B00462260C36
 - expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 18.315
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 18.33333
+  response: 7B00462260C37
+- expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 19.314
     VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 19.33333
   response: 7B00462260C3A
