--- a/tests/test_cases/2023/commands/746.7B0.22261F|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.22261F|fc=1.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS: 76
   response: 7B00562261F004C
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS: 180
+  response: 7B00562261F00B4
