--- a/tests/test_cases/2023/commands/746.7B0.222622|fc=1.yaml
+++ b/tests/test_cases/2023/commands/746.7B0.222622|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 746.7B0.222622|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 2.5
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 2.5
+  response: 7B006622622001F05
+- expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 3
     VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 3
   response: 7B006622622002006
