--- a/tests/test_cases/2023/commands/7E0.0105.yaml
+++ b/tests/test_cases/2023/commands/7E0.0105.yaml
@@ -18,3 +18,8 @@ test_cases:
 - expected_values:
     ECT: 95
   response: '7E803410587'
+- expected_values:
+    ECT: 88
+  response: |-
+    7E903410580
+    7E803410580
